# nh

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  fix.sh  flake.nix  package.nix  rustfmt.toml  shell.nix
.github/: FUNDING.yaml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: build.yaml  check.yaml  cleanup.yaml  nixos-search.yaml  tag.yaml  test.yaml  update.yaml
checks/: vm.nix
checks/nixos/: nh-flakes.nix
hosts/laptop/: default.nix
hosts/laptop-huawei/: default.nix
hosts/laptop-huawei/users/unixpariah/: default.nix
hosts/laptop/users/unixpariah/: default.nix
hosts/t851/: default.nix
hosts/t851/users/os1/: default.nix
modules/home/: default.nix
modules/home/environment/compositor/hyprland/: default.nix
modules/home/environment/idle/: default.nix
modules/home/environment/lockscreen/: default.nix
modules/home/environment/notify/: default.nix
modules/home/environment/status-bar/: default.nix
modules/home/environment/wallpaper/: default.nix
modules/home/nixpkgs/: default.nix
modules/home/programs/: default.nix
modules/home/programs/bat/: default.nix
modules/home/programs/browser/: default.nix
modules/home/programs/browser/firefox/: default.nix
modules/home/programs/browser/zen/: default.nix
modules/home/programs/editor/helix/: default.nix
modules/home/programs/editor/nvim/: default.nix
modules/home/programs/fastfetch/: default.nix
modules/home/programs/shell/nushell/: default.nix
modules/home/programs/vcs/git/: default.nix
modules/home/programs/vcs/jj/: default.nix
modules/home/programs/vesktop/: default.nix
modules/home/services/: default.nix
modules/nixos/: default.nix
modules/nixos/gaming/: default.nix
modules/nixos/gaming/steam/: default.nix
modules/nixos/networking/ssh/: default.nix
modules/nixos/nixpkgs/: default.nix
modules/nixos/system/bootloader/: default.nix  grub.nix  limine.nix  systemd-boot.nix
modules/overlays/: default.nix
modules/system/: default.nix
modules/system/nix/: default.nix
npins/: sources.json
src/: checks.rs  clean.rs  commands.rs  completion.rs  darwin.rs  generations.rs  home.rs  installable.rs  interface.rs  json.rs  lib.rs  logging.rs  main.rs  nixos.rs  notify.rs  search.rs  system_manager.rs  update.rs  util.rs
src/util/: platform.rs
test/: configuration.nix
xtask/: Cargo.toml
xtask/src/: main.rs  man.rs
