
[workspace]
members = [
    ".",
    "xtask",
]

[workspace.package]
edition = "2024"
version = "4.1.2"
rust-version = "1.86.0"

[workspace.dependencies.clap]
version = "4.5.41"
features = [
  "cargo",
  "color",
  "derive",
  "env",
  "unstable-styles",
]

[package]
name = "nh"
license = "EUPL-1.2"
repository = "https://github.com/nix-community/nh"
description = "Yet Another Nix Helper"
keywords = ["nix", "helper"]
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anstyle = "1.0.0"
chrono = "0.4.39"
clap.workspace = true
clap_builder = "4.5.9"
clap_complete = "4.5.8"
clean-path = "0.2"
color-eyre = { version = "0.6.2", default-features = false, features = [
  "track-caller",
] }
dialoguer = { version = "0.11.0", default-features = false }
dix = "1.2.1"
elasticsearch-dsl = "0.4.19"
hostname = "0.4"
humantime = "2.1.0"
nix = { version = "0.30.1", default-features = false, features = [
  "fs",
  "user",
] }
owo-colors = "4.0.0"
regex = "1.8.4"
reqwest = { version = "0.12.0", features = [
  "rustls-tls",
  "blocking",
  "json",
], default-features = false }
semver = "1.0.22"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
subprocess = "0.2"
supports-hyperlinks = "3.0.0"
tempfile = "3.5.0"
textwrap = { version = "0.16.0", features = ["terminal_size"] }
thiserror = "2.0"
timeago = { version = "0.4.1", default-features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "registry",
  "std",
] }
uzers = { version = "0.12.0", default-features = false }

[target.'cfg(target_os="macos")'.dependencies]
system-configuration = "0.6.1"

[dev-dependencies]
proptest = "1.6.0"
serial_test = "3.2.0"
clap_mangen = "0.2.28"

[profile.release]
opt-level = 3
lto = true
strip = true
