
[workspace]
members = [ ".", "xtask" ]

[workspace.package]
edition      = "2024"
rust-version = "1.86.0"
version      = "4.2.0-beta5"

[workspace.dependencies.clap]
features = [ "cargo", "color", "derive", "env", "unstable-styles" ]
version  = "4.5.41"

[package]
name                   = "nh"
license                = "EUPL-1.2"
repository             = "https://github.com/nix-community/nh"
description            = "Yet Another Nix Helper"
keywords               = [ "nix", "helper" ]
readme                 = "README.md"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anstyle = "1.0.11"
chrono = "0.4.41"
clap.workspace = true
clap-verbosity-flag = { version = "3.0.4", features = [ "tracing" ], default-features = false }
clap_complete = "4.5.57"
color-eyre = { default-features = false, features = [ "track-caller" ], version = "0.6.5" }
dix = "1.3.0"
elasticsearch-dsl = "0.4.23"
hostname = "0.4.1"
humantime = "2.2.0"
inquire = { default-features = false, version = "0.7.5", features = [ "crossterm" ] }
nix = { default-features = false, features = [ "fs", "user" ], version = "0.30.1" }
owo-colors = "4.2.2"
regex = "1.11.2"
reqwest = { default-features = false, features = [
  "rustls-tls-native-roots",
  "blocking",
  "json",
], version = "0.12.23" }
secrecy = { version = "0.10.3", features = ["serde"] }
semver = "1.0.26"
serde = { features = [ "derive" ], version = "1.0.219" }
serde_json = "1.0.143"
subprocess = "0.2.9"
supports-hyperlinks = "3.1.0"
tempfile = "3.21.0"
textwrap = { features = [ "terminal_size" ], version = "0.16.2" }
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = { features = [ "env-filter", "registry", "std" ], version = "0.3.20" }
which = "8.0.0"

[target.'cfg(target_os="macos")'.dependencies]
system-configuration = "0.6.1"

[dev-dependencies]
clap_mangen = "0.2.28"
proptest    = "1.7.0"
serial_test = "3.2.0"

[profile.release]
lto       = true
opt-level = 3
strip     = true
